# rivbagmanager

./: Cargo.toml  build.rs  rubytest.rb
lib/: bag_pb.rb  bag_services_pb.rb
src/: main.rs
