[package]
name = "rivbagmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
prost = "0.12.3"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
tonic = "0.11.0"
[build-dependencies]
tonic-build = "0.11.0"
reqwest = { version = "0.12.2", features = ["blocking"] }
